added second screen

--- a/brightenDay()/app/src/main/AndroidManifest.xml
+++ b/brightenDay()/app/src/main/AndroidManifest.xml
@@ -16,6 +16,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".Moods"
+            android:label="@string/title_activity_moods"
+            android:parentActivityName=".Home" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.tahiraziz.brightenday.Home" />
+        </activity>
     </application>
 
 </manifest>
